--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
   <link rel="stylesheet" href="style.css">
   </head>
 <body>
+  <main>
+    <button id="btnRefreshAllEmp" class="button is-info">Refresh list</button>
     <table id="tableData" class="table">
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>Firstname</th>
-                <th>Lastname</th>
-                <th>Action</th>
+      <thead>
+          <tr>
+              <th>#</th>
+              <th>Firstname</th>
+              <th>Lastname</th>
+              <th>Action</th>
 
-            </tr>
-        </thead>
-    </table>
+          </tr>
+      </thead>
+  </table>
+  </main>
+
 <!---------------------modal--------------------->
 <div class="modal">
   <div class="modal-background"></div>
